#63 more tests, now with better coverage