@@ -118,6 +118,26 @@
             	</configuration>
 				<version>2.7.5</version>
 			</plugin>
+
+			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+        		<artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                    @{jaCoCoArgLine} --add-opens ui/ui=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+	        </plugin>
+
+			<plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <configuration>
+                    <propertyName>
+                        jaCoCoArgLine
+                    </propertyName>
+                </configuration>
+            </plugin>
 			
 			<!-- Run the spotbugs quality tool-->
 			<!-- <plugin>
